--- a/d_p_side_tiles.info.yml
+++ b/d_p_side_tiles.info.yml
@@ -3,9 +3,11 @@ core: 8.x
 description: 'Provides a paragraph with side Masonry tiles.'
 type: module
 dependencies:
+  - colorbox
   - content_translation
   - d_p
   - field
+  - file
   - image
   - language
   - link
